[package]
name = "todomine"
version = "0.1.0"
edition = "2021"
[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["derive", "cargo"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
